# docker-flask-celery

./: .env.trains  LICENSE  README.md  compose.yml  micro-train.drawio
common/: db.py  logging_config.yml  station.py
common/models/: __init__.py  periodic_task.py
controller/: Dockerfile  pyproject.toml
controller/src/controller/: app.py  settings.py  speed_logger.py  tasks.py
controller/src/controller/clients/: gatekeeper_client.py
controller/tests/clients/: test_gatekeeper_client.py
gatekeeper/: Dockerfile  pyproject.toml
gatekeeper/src/gatekeeper/: app.py  routes.py  settings.py
gatekeeper/src/gatekeeper/models/: gate.py  gate_switch.py
gatekeeper/src/gatekeeper/views/: gate_status_response.py
gatekeeper/tests/: test_routes.py
gatekeeper/tests/models/: test_gate.py
postgres/: Dockerfile  init.sql
rabbitmq/: Dockerfile
scripts/: test_static.sh  test_unit.sh
trains/: Dockerfile  pyproject.toml
trains/src/trains/: app.py  settings.py
trains/src/trains/tasks/: periodic_task_config.py  syncing_scheduler.py  tasks.py  train.py  train_task.py
trains/tests/tasks/: test_train_task.py
