[project]
name = "trains"
version = "1.0.0"
description = "Module controlling signals produced by trains."
authors = [
    {name = "arekkulczycki", email = "ten.arek@gmail.com"},
]
dependencies = [
    "celery>=5.3.6",
    "pydantic-settings>=2.2.1",
    "PyYAML>=6.0.1",
    "sqlalchemy>=2.0.28",
    "psycopg2-binary>=2.9.9",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "black",
    "flake8",
    "pyright>=1.1.355",
]
test = [
    "pytest",
    "pytest-celery>=0.0.0",
]

[tool.pyright]
typeCheckingMode = "strict"
